--- a/index-v1-a-main-pc.html
+++ b/index-v1-a-main-pc.html
@@ -12,23 +12,37 @@
     }
     body {
       margin: 0;
-      background: #fff;
+      background: #000;
+      min-height: 100vh;
+      min-width: 100vw;
       display: flex;
       justify-content: center;
       align-items: flex-start;
-      min-height: 100vh;
+    }
+    .container {
+      width: 100vw;
+      display: flex;
+      justify-content: center;
     }
     img {
       display: block;
-      max-width: 100vw;
-      height: auto;
+      max-width: 1920px;   /* 이미지 원본 폭으로 설정 */
       width: 100%;
+      height: auto;
       margin: 0;
       box-sizing: border-box;
+    }
+    @media (max-width: 1920px) {
+      img {
+        width: 100vw;
+        max-width: 100vw;
+      }
     }
   </style>
 </head>
 <body>
-  <img src="https://raw.githubusercontent.com/hddnfig/ktrust/refs/heads/main/ktrust_A-main.jpg" alt="v1-A-main-pc">
+  <div class="container">
+    <img src="https://raw.githubusercontent.com/hddnfig/ktrust/refs/heads/main/ktrust_A-main.jpg" alt="v1-A-main-pc">
+  </div>
 </body>
 </html>
