--- a/index-v1-b-main-pc.html
+++ b/index-v1-b-main-pc.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>한국투자부동산신탁 디자인시안 v.1 A안 메인 - PC</title>
+  <title>한국투자부동산신탁 디자인시안 v.1</title>
   <style>
     html, body {
       height: 100%;
