--- a/topvisual_test.html
+++ b/topvisual_test.html
@@ -114,13 +114,11 @@
 
     <!-- 네이비 컨텐츠 영역 -->
     <section class="content-section">
-        <h2>메인 컨텐츠 영역</h2>
+        <h2>>반응형 이미지 테스트</h2>
         <p>
-            이 영역은 네이비 컬러로 처리된 컨텐츠 영역입니다. 
-            상단의 이미지는 브라우저 크기에 따라 적절히 스케일링되며, 
-            높이는 항상 600px로 고정됩니다.
-            1920x1080 화면에서 최적화되어 있으며, 
-            더 큰 화면에서는 확대되고 작은 화면에서는 축소됩니다.
+            상단 이미지는 1920x600 크기로 설정되어 있으며, 브라우저 크기에 따라 적절히 스케일됩니다.<br>
+            이미지 영역의 높이(600px)는 고정되어 있으며, 브라우저 크기 변동에 영향받지 않습니다.<br>
+            1920x1080 화면에서 최적으로 보이며, 그보다 크면 확대, 작으면 축소됩니다.
         </p>
     </section>
 
