--- a/topvisual_test.html
+++ b/topvisual_test.html
@@ -114,7 +114,7 @@
 
     <!-- 네이비 컨텐츠 영역 -->
     <section class="content-section">
-        <h2>>반응형 이미지 테스트</h2>
+        <h2>반응형 이미지 테스트</h2>
         <p>
             상단 이미지는 1920x600 크기로 설정되어 있으며, 브라우저 크기에 따라 적절히 스케일됩니다.<br>
             이미지 영역의 높이(600px)는 고정되어 있으며, 브라우저 크기 변동에 영향받지 않습니다.<br>
