--- a/topvisual_test.html
+++ b/topvisual_test.html
@@ -56,7 +56,7 @@
         /* 네이비 컨텐츠 영역 */
         .content-section {
             background-color: #1a237e; /* 네이비 컬러 */
-            min-height: calc(100vh - 600px); /* 상단 이미지 높이를 제외한 나머지 화면 */
+            height: 4400px; /* 전체 5000px - 상단 이미지 600px = 4400px */
             padding: 40px 20px;
             color: white;
             text-align: center;
