--- a/topvisual_test2.html
+++ b/topvisual_test2.html
@@ -21,6 +21,8 @@
             width: 100%;
             height: 600px; /* 고정 높이 - 브라우저 크기 변동에 영향받지 않음 */
             position: fixed;
+            top: 0; left: 0;   /* 화면 상단 고정 */
+            z-index: 1;        /* 컨텐츠 아래 레이어 */
             overflow: hidden;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); /* 이미지 대체용 그라데이션 배경 */
             display: flex;
@@ -57,10 +59,13 @@
         .content-section {
             background-color: #1a237e; /* 네이비 컬러 */
             height: 4400px; /* 전체 5000px - 상단 이미지 600px = 4400px */
-            margin-top: 600px; /* 상단 이미지 높이만큼 여백 추가 */
+            margin-top: 600px; /* ← 추가 */
+            position: relative;
+            z-index: 2;        /* ← 추가: 네이비가 이미지 위로 올라오게 */
             padding: 40px 20px;
             color: white;
             text-align: center;
+            transition: background-color 0.2s linear;
         }
 
         .content-section h2 {
