--- a/topvisual_test2.html
+++ b/topvisual_test2.html
@@ -124,7 +124,8 @@
         <p>
             상단 이미지는 1920x600 크기로 설정되어 있으며, 브라우저 크기에 따라 적절히 스케일됩니다.<br>
             이미지 영역의 높이(600px)는 고정되어 있으며, 브라우저 크기 변동에 영향받지 않습니다.<br>
-            1920x1080 화면에서 최적으로 보이며, 그보다 크면 확대, 작으면 축소됩니다.
+            1920x1080 화면에서 최적으로 보이며, 그보다 크면 확대, 작으면 축소됩니다.<br>
+            아래로 스크롤 할 때, 상단 이미지는 고정된채로 하단 영역이 비주얼 영역 위를 덮으면서 스크롤됩니다. 
         </p>
     </section>
 
